feat(client): add sign up links

--- a/client/src/pages/sign-in/sign-in.html
+++ b/client/src/pages/sign-in/sign-in.html
@@ -39,5 +39,8 @@
       <p-button type="submit" label="{{ loading ? 'Logging in...' : 'Login' }}" [disabled]="loading"
         styleClass="w-full"></p-button>
     </form>
+
+    <p class="text-center mt-3 text-sm">Don't have an account ? <a routerLink="/sign-up"
+        class="underline text-green-300">Sign Up</a></p>
   </p-card>
 </div>
