--- a/client/src/pages/sign-up/sign-up.html
+++ b/client/src/pages/sign-up/sign-up.html
@@ -54,5 +54,7 @@
       <p-button type="submit" label="{{ loading ? 'Logging in...' : 'Login' }}" [disabled]="loading"
         styleClass="w-full"></p-button>
     </form>
+    <p class="text-center mt-3 text-sm">Already have an account ? <a routerLink="/sign-in"
+        class="underline text-green-300">Sign In</a></p>
   </p-card>
 </div>
