feat(client): add auto login on register submit

--- a/client/src/pages/sign-in/sign-in.html
+++ b/client/src/pages/sign-in/sign-in.html
@@ -36,7 +36,7 @@
       }
 
       <!-- Submit button -->
-      <p-button type="submit" label="{{ loading ? 'Logging in...' : 'Login' }}" [disabled]="loading"
+      <p-button type="submit" label="{{ loading ? 'Signing in...' : 'Sign In' }}" [disabled]="loading"
         styleClass="w-full"></p-button>
     </form>
 
