--- a/client/src/pages/sign-up/sign-up.html
+++ b/client/src/pages/sign-up/sign-up.html
@@ -51,7 +51,7 @@
       }
 
       <!-- Submit button -->
-      <p-button type="submit" label="{{ loading ? 'Logging in...' : 'Login' }}" [disabled]="loading"
+      <p-button type="submit" label="{{ loading ? 'Signing up...' : 'Sign Up' }}" [disabled]="loading"
         styleClass="w-full"></p-button>
     </form>
     <p class="text-center mt-3 text-sm">Already have an account ? <a routerLink="/sign-in"
