feat(client): add loading screen

--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -1,19 +1,6 @@
 <main class="min-h-screen bg-gradient-to-br from-slate-50 to-blue-50">
   <!-- Header -->
-  <div class="bg-white shadow-sm border-b sticky top-0 z-50">
-    <div class="px-4 py-3 flex items-center justify-between">
-      <div class="flex items-center space-x-2">
-        <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center">
-          <i class="pi pi-bolt text-white text-sm"></i>
-        </div>
-        <h1 class="text-lg font-bold text-gray-900">Gym Tracker</h1>
-      </div>
-
-      <p-button icon="pi pi-history" (onClick)="showWorkoutHistory = true"
-        styleClass="p-button-text p-button-rounded p-button-sm" [text]="true">
-      </p-button>
-    </div>
-  </div>
+  <menu-bar (historyOpen)="showWorkoutHistory = true" />
 
   <div class="px-4 pb-20">
     <!-- Start Screen -->
@@ -189,12 +176,4 @@
       </div>
     </div>
   </p-dialog>
-
-  <!-- Toast Messages -->
-  <p-toast position="top-center"></p-toast>
-
-  <!-- Confirmation Dialog -->
-  <p-confirmDialog></p-confirmDialog>
-
-  <router-outlet />
 </main>
