chore(client): add spacing on auth page mobile

--- a/client/src/pages/sign-in/sign-in.html
+++ b/client/src/pages/sign-in/sign-in.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
+<div class="flex items-center justify-center min-h-screen bg-gray-100 px-2">
   <p-card header="Sign In" class="w-full max-w-md shadow-lg rounded-2xl">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="space-y-5">
 
