--- a/client/src/pages/sign-up/sign-up.html
+++ b/client/src/pages/sign-up/sign-up.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center min-h-screen bg-gray-100">
+<div class="flex items-center justify-center min-h-screen bg-gray-100 px-2">
   <p-card header="Sign Up" class="w-full max-w-md shadow-lg rounded-2xl">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="space-y-5">
 
