--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -6,7 +6,7 @@
 
   <!-- Active Workout -->
   @if (this.gymService.currentWorkout()) {
-    <div class="py-4 space-y-4">
+    <div class="py-4 flex flex-col gap-4">
       <!-- Workout Info Card -->
       <div class="bg-white rounded-xl p-4 shadow-sm border">
         <div class="flex items-center justify-between mb-2">
