--- a/client/src/pages/home/home.html
+++ b/client/src/pages/home/home.html
@@ -27,6 +27,7 @@
       @for (exercise of this.gymService.exercises(); track exercise._id) {
         <exercise-card
           [exercise]="exercise"
+          [workoutId]="this.gymService.currentWorkout()?._id"
           (addSet)="addSet($event)"
           (removeExercise)="removeExercise($event)"
           (removeSet)="removeSet($event.id, $event.index)"
