feat(client): add dynamic fetch on history

--- a/client/src/pages/history/history.html
+++ b/client/src/pages/history/history.html
@@ -1,5 +1,9 @@
 <div>
-  <workouts-calendar [events]="workoutService.workouts()" (daySelected)="onDaySelected($event)" />
+  <workouts-calendar
+    [events]="workouts()"
+    (daySelected)="onDaySelected($event)"
+    (dateChanged)="onDateChanged($event)"
+  />
 
   <workouts-history-dialog
     [(open)]="showWorkoutHistory"
