fix(client): visually remove workout when deleted

--- a/client/src/pages/history/history.html
+++ b/client/src/pages/history/history.html
@@ -9,5 +9,6 @@
     [(open)]="showWorkoutHistory"
     [workouts]="selectedDayWorkouts()"
     (openChange)="showWorkoutHistory = $event"
+    (workoutDelete)="handleWorkoutDelete($event)"
   />
 </div>
